# game_engine

./: .gitignore  CMakeLists.txt
runtime_resources/models/: grass.glb  ground.mtl  ground_plane.glb
runtime_resources/models/mig/: license.txt  scene.gltf
runtime_resources/shaders/: fragment.glsl  vertex.glsl
src/: Application.cpp  Application.hpp  CameraData.hpp  CameraSystem.hpp  Component.hpp  Entity.cpp  Entity.hpp  Event.cpp  Event.hpp  Id.cpp  Id.hpp  Input.cpp  Input.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  System.hpp  Transform.hpp  main.cpp
